[package]
name = "meetly-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
tokio = {features = ["rt-multi-thread"], version = "*"}
tracing = "*"
tracing-subscriber = "*"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
serde = {version = "*", features = ["derive"]}
futures = "*"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
axum-auth = "*"
chrono = "0.4.38"
rand = "0.8.5"